Vaul masterykey done

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ MONGO_URI=mongodb+srv://2414501734:xGLGQMrxt8ViVUAL@cluster0.marnr.mongodb.net/P
 
 PORT = 5000
 JWT_SECRET= 2414501734
+FRONTEND_URL = http://localhost:5175
+CRYPTO_SECRET= iamaverysecurekey12345
